language/move-lang/tests/move_check/typing/recursive_structs.exp
error: 

   ┌── tests/move_check/typing/recursive_structs.move:4:21 ───
   │
 4 │     struct Foo { f: Foo }
   │                     --- Using this struct creates a cycle: 'Foo' contains 'Foo'
   │                     ^^^ Invalid field containing 'Foo' in struct 'Foo'.
   │

error: 

   ┌── tests/move_check/typing/recursive_structs.move:7:25 ───
   │
 7 │     struct Bar { f: Cup<Bar> }
   │                         --- Using this struct creates a cycle: 'Bar' contains 'Bar'
   │                         ^^^ Invalid field containing 'Bar' in struct 'Bar'.
   │

error: 

   ┌── tests/move_check/typing/recursive_structs.move:9:35 ───
   │
 9 │     resource struct X { y: vector<Y> }
   │                                   - Using this struct creates a cycle: 'Y' contains 'X' contains 'Y'
   │                                   ^ Invalid field containing 'Y' in struct 'X'.
   │

error: 

    ┌── tests/move_check/typing/recursive_structs.move:17:29 ───
    │
 17 │     struct Foo { f: M0::Cup<Foo> }
    │                             --- Using this struct creates a cycle: 'Foo' contains 'Foo'
    │                             ^^^ Invalid field containing 'Foo' in struct 'Foo'.
    │

error: 

    ┌── tests/move_check/typing/recursive_structs.move:21:26 ───
    │
 21 │     struct C { d: vector<D> }
    │                          - Using this struct creates a cycle: 'D' contains 'A' contains 'B' contains 'C' contains 'D'
    │                          ^ Invalid field containing 'D' in struct 'C'.
    │

